force-app/main/default/objects/Enhanced_Comment__c/Enhanced_Comment__c.object-meta.xml
<CustomObject>
    <label>Enhanced Comment</label>
    <pluralLabel>Enhanced Comments</pluralLabel>
    <nameField>
        <label>Enhanced Comment Name</label>
        <type>AutoNumber</type>
        <displayFormat>EC-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>