force-app/main/default/objects/Enhanced_Comment__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <type>Html</type>
    <length>1310</length>
</CustomField>