force-app/main/default/objects/Enhanced_Comment__c/fields/Color_Class__c.field-meta.xml
<CustomField>
    <fullName>Color_Class__c</fullName>
    <label>Color Class</label>
    <type>Text</type>
    <length>40</length>
</CustomField>