force-app/main/default/objects/Enhanced_Comment__c/fields/Comment_Number__c.field-meta.xml
<CustomField>
    <fullName>Comment_Number__c</fullName>
    <label>Comment Number</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>