force-app/main/default/objects/Enhanced_Comment__c/fields/Email_Preview__c.field-meta.xml
<CustomField>
    <fullName>Email_Preview__c</fullName>
    <label>Email Preview</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>