force-app/main/default/objects/Enhanced_Comment__c/fields/Is_Draft__c.field-meta.xml
<CustomField>
    <fullName>Is_Draft__c</fullName>
    <label>Is Draft</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>