force-app/main/default/objects/Enhanced_Comment__c/fields/Is_Public__c.field-meta.xml
<CustomField>
    <fullName>Is_Public__c</fullName>
    <label>Is Public</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>