force-app/main/default/objects/Enhanced_Comment__c/fields/Parent_Comment__c.field-meta.xml
<CustomField>
    <fullName>Parent_Comment__c</fullName>
    <label>Parent Comment</label>
    <type>Lookup</type>
    <referenceTo>Enhanced_Comment__c</referenceTo>
    <relationshipName>Parent_Comment</relationshipName>
</CustomField>