force-app/main/default/objects/Enhanced_Comment__c/fields/Plain_Body__c.field-meta.xml
<CustomField>
    <fullName>Plain_Body__c</fullName>
    <label>Plain Body</label>
    <type>LongTextArea</type>
    <length>1310</length>
</CustomField>