force-app/main/default/objects/Enhanced_Comment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default></value>
            <value><fullName>Deleted</fullName></value>
            <value><fullName>Archived</fullName></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>