force-app/main/default/objects/Enhanced_Comment__c/fields/Thread_Count__c.field-meta.xml
<CustomField>
    <fullName>Thread_Count__c</fullName>
    <label>Thread Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>